--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,3 +1,35 @@
+body {
+  /* background-image: url("/images/background.jpg");
+  background-size: cover; */
+  background-color: darkblue;
+  color: aliceblue;
+}
+
+header li {
+  display:inline
+}
+
+header h1 {
+  font-size: xxx-large;
+}
+
+header img {
+  height: 1rem;
+  width: 1rem;
+  border-radius: 0.5rem;
+}
+
+nav a {
+  text-decoration: none;
+}
+
+nav img {
+  height: 3em;
+  width: 3em;
+  border-radius: 1em;
+  padding-left: 3em;
+}
+
 #content {
   margin-left: auto;
   margin-right: auto;
@@ -6,4 +38,8 @@
 
 #greeting-container {
   margin-top: 20px;
+}
+
+#pic-container img{
+    max-width: 400px;
 }
