makes links visable against background

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -19,8 +19,12 @@ header img {
   border-radius: 0.5rem;
 }
 
-nav a {
-  text-decoration: none;
+a {
+  all: unset;
+}
+
+a:hover {
+    color: red;
 }
 
 nav img {
