--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,6 +1,4 @@
 body {
-  /* background-image: url("/images/background.jpg");
-  background-size: cover; */
   background-color: darkblue;
   color: aliceblue;
 }
@@ -44,6 +42,6 @@ nav img {
   margin-top: 20px;
 }
 
-#pic-container img{
+#favorite-pic {
     max-width: 400px;
 }
